# KB2DS

./: 99-KB2DS.rules  99-kb-to-ds5.rules  CLAUDE.md  CMakeLists.txt  README.md
assets/: resources.qrc
relay-core/: ds5_report.hpp  hidraw_utils.hpp  uhid_device.hpp
src/: apptheme.cpp  apptheme.hpp  controllermapwidget.cpp  controllermapwidget.hpp  igdbclient.cpp  igdbclient.hpp  inputworker.cpp  inputworker.hpp  main.cpp  mainwindow.cpp  mainwindow.hpp  mapping.hpp  mappingeditorwidget.cpp  mappingeditorwidget.hpp  mappingstorage.cpp  mappingstorage.hpp  saveprofiledialog.cpp  saveprofiledialog.hpp
